# ChatCal.ai

./: .gitignore  CLAUDE.md  LinkedInPost.md  README.md  deploy_correct_client_id.txt  deployment_test.txt  groq-llama.py  hf-lama.py  hf-spaces-lama.py  llama-anthropic.py  simpletest.py  test_clean_secret.txt  test_deployment.txt  testkey.sh  testlink  wif_test.txt
chatcal-ai/: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CHATCAL_LINKEDIN_DIAGRAM.html  CHATCAL_LINKEDIN_DIAGRAM.md  DEPLOYMENT.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.fast  Dockerfile.quick  Dockerfile.simple  GITHUB_ACTIONS_SETUP.md  LinkedInPost2.md  LinkedInPost3.html  LinkedInPost3_WorkingHours.md  LinkedInPost4.html  LinkedInPost4_Success.md  LinkedInPost5_OAuthSuccess.md  README.md  WORKING_HOURS.md  chat_ui.html  check_anthropic_account.py  cloudbuild-fresh-deploy.yaml  cloudbuild.yaml  cloudrun-service.yaml  complete_oauth.py  create_linkedin4_pdf.py  create_pdf.py  debug-widget.html  debug_client_id.py  debug_config.py  debug_contact_issue.py  debug_date_parsing.py  debug_meet_creation.py  debug_oauth.py  deploy-new-service.sh  deploy_fresh.sh  deployment_check.txt  docker-compose.yml  (+30 more)
chatcal-ai/.github/workflows/: deploy-cloud-run.yml  deploy-new-service.yml  fresh-deploy.yml
chatcal-ai/app/: config.py
chatcal-ai/app/api/: audio_websocket.py  chat_widget.py  (+3 more)
chatcal-ai/docs/: design-document.html  google-oauth-setup.md  linkedin-google-calendar-integration.md
chatcal-ai/scripts/: cost-monitor.sh
chatcal-ai/tests/: __init__.py  test_gemini_llm.py  test_validators.py
(+57 files in other folders)
